--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="https://image.ibb.co/fOur3b/favicon.png"/>
   <meta name="theme-color" content="#1885ed">
-    <title>Bricks.io - Homepage</title>
+    <title>SplitDeal</title>
   </head>
   
   <body>
