--- a/views/login.html
+++ b/views/login.html
@@ -24,17 +24,34 @@
     <div class="header__menu">
       <nav id="navbar" class="header__nav collapse">
         <ul class="header__elenco">
-          <li class="header__el"><a href="#" class="header__link">Home</a></li>
+          <li class="header__el"><a href="/views/index.html" class="header__link">Home</a></li>
           <li class="header__el"><a href="#" class="header__link">Deals</a></li>
           <li class="header__el"><a href="#" class="header__link">Success stories</a></li>
           <li class="header__el"><a href="#" class="header__link">About Us</a></li>
-          <li class="header__el"><a href="#" class="header__link">Contact us</a></li>
+          <li class="header__el"><a href="/views/index.html" class="header__link">Contact us</a></li>
         </ul>
       </nav>
     </div>
       </div>
   </header>
   
+  <div class="login-page">
+    <div class="form">
+      <form class="register-form">
+        <input type="text" placeholder="name"/>
+        <input type="password" placeholder="password"/>
+        <input type="text" placeholder="email address"/>
+        <button>create</button>
+        <p class="message">Already registered? <a href="#">Sign In</a></p>
+      </form>
+      <form class="login-form">
+        <input type="text" placeholder="username"/>
+        <input type="password" placeholder="password"/>
+        <button>login</button>
+        <p class="message">Not registered? <a href="#">Create an account</a></p>
+      </form>
+    </div>
+  </div>
   
   
   
