Fixing api changes for dealsdetails page

--- a/public/views/dealsDetails.html
+++ b/public/views/dealsDetails.html
@@ -6,7 +6,7 @@
     <title>Deals | SplitDeal</title>
     <link rel="stylesheet" href="/css/dealsDetails.css" />
     <link rel="stylesheet" href="/css/styles.css" />
-    <script src="/js/dealDetails.js"></script>
+    <!-- <script src="/js/dealDetails.js"></script> -->
   </head>
   <body>
     <!-- Header/Navbar -->
